--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.data.mongodb.uri=mongodb://localhost:27017/gestionconge
 logging.level.org.springframework.security=DEBUG
 server.port=8085
 spring.main.allow-bean-definition-overriding=true
+spring:
+web:
+cors:
+allowed-origins: http://localhost:4200
+allowed-methods: GET, POST, PUT, DELETE
+allowed-headers: Content-Type, Accept
